--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch ./index.ts",
     "build": "tsc",
-    "start": "node ./index.ts"
+    "start": "ts-node ./index.ts"
   },
   "keywords": [],
   "author": "",
